# MHPC23-P1.7-Fr_-

./: .gitignore  CMakeLists.txt  README.md  bmake.sh
backup/: CMakeLists.txt
benchmarks/dataset/: bench_mpi_108.txt  bench_mpi_2916.txt  bench_mpi_78732.txt  bench_omp_108.txt  bench_omp_2916.txt  bench_omp_78732.txt  mpi_omp_2916.txt  mpi_omp_78732.txt  mpi_omp_78732_8nodes.txt  newton3rdlaw.txt  optimized_flags.txt  optimized_o3.txt  unoptimized.txt
include/: cleanup.h  constants.h  force_comp.h  input.h  memory.h  output.h  types.h  utilities.h  verlet.h
src/: cleanup.c  constants.c  force_comp.c  input.c  main.c  main.cpp  main.ipynb  main.py  memory.c  output.c  utilities.c  verlet.c
tests/: test_ekin.cpp  test_forces.cpp  test_input.cpp  test_verlet.cpp
tests/input_test/: ekin_test.inp  ekin_test.rest
